# plapack

./: .project  CMakeLists.txt  Make.include  Makefile  mingw-fix.c  rand-fix.c
BLAS2/: Makefile  PLA_Symv.c  PLA_Symv_perform_local_part.c  PLA_Syr2_perform_local_part.c
BLAS3/: Makefile  PLA_Herk_perform_local_part.c  PLA_Symm.c  PLA_Symm_left_lower.c  PLA_Symm_left_upper.c  PLA_Symm_right_lower.c  PLA_Symm_right_upper.c  PLA_Syr2k.c  PLA_Syr2k_enter_exit.c  PLA_Syr2k_panpan.c  PLA_Syr2k_perform_local_part.c  PLA_Syrk_perform_local_part.c  PLA_Trmm.c  PLA_Trmm_left_lower.c  PLA_Trmm_left_lower_notrans.c  PLA_Trmm_left_lower_trans.c  PLA_Trmm_left_upper_notrans.c  PLA_Trmm_left_upper_trans.c  PLA_Trmm_right_lower_notrans.c  PLA_Trmm_right_lower_trans.c  PLA_Trmm_right_upper_notrans.c  PLA_Trmm_right_upper_trans.c  PLA_Trsm.c  PLA_Trsm_left_lower_notrans.c  PLA_Trsm_left_lower_trans.c  PLA_Trsm_left_upper_notrans.c  PLA_Trsm_left_upper_trans.c  PLA_Trsm_right_lower_notrans.c  PLA_Trsm_right_lower_trans.c  PLA_Trsm_right_upper_notrans.c  PLA_Trsm_right_upper_trans.c
EXAMPLES/Cholesky/: #create_problem.c#
FORTRAN_interface/: PLA_Conversion.c  PLA_Fortran.c  random.c  work.pc
INCLUDE/: PLA.h  PLA.h~  PLA_BLAS.h  PLA_BLAS.h~  PLA_BLAS_IMS.h  PLA_Obj2.h  PLA_define.h  PLA_prototypes.h  PLA_prototypes.h~
Local_BLAS/: Makefile  PLA_Local_syr2k.c
REDUCE/: PLA_Reduce.c  PLA_Reduce_xx.c
SOLVERS/Eigensolvers/: Makefile  work.pc
SOLVERS/LINPACK/: LIN-GM.o7999  LIN-GM.o8001  Makefile  PI12225  PI19013  PI30760  job  newjob
SOLVERS/QR/: PLA_QR_right_update.c  PLA_Q_solve.c  PLA_Q_solve_matrix.c
SOLVERS/Reduction/: PLA_Tri_red.c
SOLVERS/SVD/: work.pc
TEST/: CMakeLists.txt  Makefile  PLA-TEST.o7837  PLA-TEST.o7838  PLA-TEST.o7869  PLA-TEST.o7870  job  job~  newlist  test_lu.x  test_svd.c
UTIL/: PLA_Obj_split_size_to_next_proc.c
